--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(fenice C)
+project(mca C)
 
 set(CMAKE_C_STANDARD 11)
 #set(CMAKE_C_FLAGS "-O3")
@@ -8,6 +8,6 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/)
 include_directories(include)
 
 set(TEST_SOURCES src/main_test.c)
-set(COMMONS src/fenice.c src/main_test.c)
+set(COMMONS src/mca.c src/main_test.c)
 
-add_executable(fenice ${COMMONS})
+add_executable(mca ${COMMONS})
