--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(mca C)
 
 set(CMAKE_C_STANDARD 11)
 #set(CMAKE_C_FLAGS "-O3")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/test)
 
 include_directories(include)
 
