edited old project name; added CMakeLists for test executable; removed unused code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.16)
 project(mca C)
 
 set(CMAKE_C_STANDARD 11)
-#set(CMAKE_C_FLAGS "-O3")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/test)
+set(CMAKE_C_FLAGS "-O3")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/)
 
-include_directories(include)
+set(COMMONS src/mca.c)
+set(SOURCES src/main.c)
 
-set(TEST_SOURCES src/main_test.c)
-set(COMMONS src/mca.c src/main_test.c)
+add_executable(mca ${COMMONS} ${SOURCES})
 
-add_executable(mca ${COMMONS})
+include(src/test/CMakeLists.txt)
