test folder moved one level up

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ project(mca C)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin/test)
 
-set(COMMONS src/mca.c)
-set(TEST_SOURCES src/test/main_test.c)
+set(COMMONS ../src/mca.c)
+set(TEST_SOURCES test/main_test.c)
 
 add_executable(mca_test ${COMMONS} ${TEST_SOURCES})
