Project renamed in 'x64 Instruction Decoder'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.16)
-project(mca C)
+project(x64id C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "-O2")
 
-set(COMMONS src/mca.c src/utils/function_length.c src/vector.c src/queue.c src/utils/test_functions.c)
+set(COMMONS src/x64id.c src/utils/function_length.c src/vector.c src/queue.c src/utils/test_functions.c)
 set(SOURCES src/main.c)
 
-add_executable(mca ${COMMONS} ${SOURCES})
+add_executable(x64id ${COMMONS} ${SOURCES})
 
 include(test/CMakeLists.txt)
